@@ -1,6 +1,5 @@
 /*
- * All content copyright (c) 2003-2008 Terracotta, Inc., except as may otherwise be noted in a separate copyright
- * notice. All rights reserved.
+ * All content copyright (c) 2003-2008 Terracotta, Inc., except as may otherwise be noted in a separate copyright notice.  All rights reserved.
  */
 package com.tc.admin.dso;
 
@@ -12,9 +11,9 @@ public class ClassTreeBranch extends ClassTreeTwig {
   }
 
   public int getInstanceCount() {
-    if (instanceCount == null) {
+    if(instanceCount == null) {
       ClassesHelper helper = ClassesHelper.getHelper();
-      instanceCount = Integer.valueOf(helper.getInstanceCount(this));
+      instanceCount = new Integer(helper.getInstanceCount(this));
     }
 
     return instanceCount.intValue();
